fixed letter a in email subject line. fixed links padding on small screens

--- a/css/home.css
+++ b/css/home.css
@@ -771,11 +771,11 @@ textarea{
 	}
 
 	.border-top div div a {
-		margin-left: 20px;
+		margin-left: 12px;
 	}
 
 	.border-bottom div a{
-		padding: 0 15px;
+		padding: 0 12px;
 	}
 
 	.contact-block input:last-child {
